Fixed width for .navbar-title to prevent overflow in ie8; added styles to help correct floats of .form-inline elements in ie8

--- a/static_files/assets/scss/_forms.scss
+++ b/static_files/assets/scss/_forms.scss
@@ -54,6 +54,15 @@ form {
 .form-group {
   margin-bottom: 20px;
 }
+.form-inline > * {
+  @include body-prefix(ie8) {
+    float: left;
+    margin-left: 5px;
+    &:first-child {
+      margin-left: 0;
+    }
+  }
+}
 
 
 /* Textareas */
